feat: added number of players watcher

--- a/src/libs/locales/messages/en.json
+++ b/src/libs/locales/messages/en.json
@@ -11,6 +11,7 @@
     "enter-lottery-cta": "Enter Lottery",
     "loading": "Loading",
     "entrance-fee": "Entrance Fee",
-    "confirming-transaction": "Pending Transaction Confirmation"
+    "confirming-transaction": "Pending Transaction Confirmation",
+    "first-player-msg": "You are the first player in the lottery. Good luck!"
   }
 }
